--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^3.3.0
   get: ^4.6.6
   firebase_auth: ^5.1.3
+  google_sign_in: ^6.2.1
+  sign_in_button: ^3.2.0
 
 dev_dependencies:
   flutter_test:
